# zaim-cli

./: Cargo.toml  LICENSE  README.md
src/: helper.rs  main.rs  oauth1a.rs  zaim_api.rs
